# jubensha

./: .dockerignore  .env.example  .eslintrc.cjs  .gitconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_LOG.md  LICENSE  MANIFEST.in  README.md  TEST_CHECKLIST.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  env.d.ts  jest.config.js  mkdocs.yml  package-lock.json  project_tasks.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  system_architecture.md  tatus  technical_implementation.md  test_langsmith.py  vite.config.ts  vitest.config.ts
.github/: branch-protection.yml  code-review.yml
.github/project-board/: config.yml  tasks.yml
.github/workflows/: cd.yml  ci.yml
admin/src/: index.css
backend/: .env.example  .eslintrc.js  .gitignore  .prettierrc  README.md  jest.config.js
backend/config/: search.config.ts  settings.py
backend/docs/: development.md
backend/src/: app.ts
config/: README.md  config.yaml
config/docker/: docker-compose.yml
config/monitoring/: prometheus.yml
docker/: Dockerfile
docs/: CHANGELOG.md  DEVELOPMENT_LOG.md  DEVLOG.md  README.md  TEST_CHECKLIST.md  ai-service.md  api.md  auto.md  burndown.md  cleanup_plan.md  dev-log.md  dev.log.md  dev_log.md  development-log.md  development-plan.md  development.md  implementation-plan.md  parallel-development.md  product_map.md  progress-tracking.md  project_map.md  project_requirements.md  project_tasks.md  rag-module.md  system_architecture.md  technical_implementation.md  test-checklist.md  testing.md
docs/api/: README.md  ai.md  api.md  auth.md  character.md  clue.md  document.md  error_codes.md  guide.md  knowledge.md  openapi.yaml  script.md  timeline.md
docs/architecture/: README.md  ai-service.md  architecture.md  logging.md  monitoring.md  performance.md  project_structure.md  rag-module.md  rag_design.md  system_flow.md
docs/database/: README.md
docs/development/: api_spec.md  dev_log.md  dev_parallel.md  development.md  development_new.md  parallel_tasks.md  task_board.md  test_checklist.md  test_plan.md
docs/execution-logs/: acceleration-execution.md
docs/project/: development-plan.md  progress-tracking.md  progress.md  project_map.md  testing.md
docs/workflow/: README.md
frontend/: commitlint.config.js  cypress.config.ts  vite.config.ts  vitest.config.ts
frontend/admin/: README.md
frontend/src/: App.vue  env.d.ts  main.ts
frontend/tests/: setup.ts
migrations/: env.py
migrations/versions/: 002_add_roles_and_permissions.py  003_add_default_roles_and_permissions.py  004_add_user_profile.py  20240314_000000_initial.py
monitoring/: README.md  alerts.yml
scripts/: README.md
scripts/database/: migrate.py
src/: main.py
tests/: conftest.py
(+600 files in other folders)
